MDEV-12060 Crash in EXECUTE IMMEDIATE with an expression returning a GRANT command

Backporting (partially) the fix for MDEV-14603.